# Airsoft-Display

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICKSTART-DATA-COLLECTION.md  RAW-VS-FILTERED-ANALYSIS.md  README.md  main.cpp  pico_examples.cpp
.github/: PUBLIC_RELEASE_SUMMARY.md  REPOSITORY_SETUP.md  copilot-instructions.md
docs/: RECONNECTION-GUIDE.md  design-guide.md  dev_research_adc-dma-shot-detection-research_Version2.md  display-driver-research.md  display-library-comparison.md  hardware-design.md  requirements.md  sh1107-update-plan.md  wiring_guide.md
docs/archive/: FONT-DECISION.md  README.md  display-library-comparison.md
docs/devlog/: 2025-01-15-design-guide.md  2025-01-30-sampling-research.md  2025-08-04-display-driver-research.md  2025-08-06-sh1107-efficiency.md  2025-08-06-sh1107-update-plan.md  2025-10-26-FONT-ANALYSIS.md  2025-10-31-PROJECT-STATUS.md  2025-10-31-RECONNECTION-GUIDE.md  2025-10-31-dma-sampling-retrospective.md  2025-11-02-rgb-display-implications.md  (+7 more)
lib/: adc_config.h  adc_sampler.cpp  adc_sampler.h  arduino_compat.h  data_collector.cpp  data_collector.h  dma_adc_sampler.cpp  dma_adc_sampler.h  flash_storage.cpp  flash_storage.h  serial_commands.cpp  serial_commands.h  temperature.cpp  temperature.h  voltage_filter.cpp  voltage_filter.h
lib/Adafruit_SH110X/: CMakeLists.txt
src/: adc_test.cpp  main.cpp  main_alt.cpp  sh1107_driver.cpp  sh1107_driver.h
tools/: README.md  analyze_frequency.py  analyze_low_frequency.py  analyze_raw_vs_filtered.py  analyze_samples.py  download_data.py  parse_capture.py
(+48 files in other folders)
